Issue #16402: In range slicing, fix shadowing of exceptions from __index__ method.